--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
-<head>first git page</head>
+<head>
+<title>first git page</title>
+</head>
 <body>
 <h2>Learn how to work on github</h2>
-  <h3>Learn how to work on github</h3>
+<h3>Learn how to work on github</h3>
+<h4>Learn how to work on github</h4>
 </body>
 </html>
